@@ -178,7 +178,7 @@ Executable git-annex
     Build-Depends: regex-compat
 
   if flag(S3)
-    Build-Depends: conduit, conduit-extra, aws (>= 0.9.2), http-client
+    Build-Depends: conduit, conduit-extra, aws (>= 0.13.0), http-client
     CPP-Options: -DWITH_S3
 
   if flag(WebDAV)
